# cpp-template

./: .chorse  CMakeLists.txt  CppProjectTemplate.code-workspace  Readme.md  ft.conf
App/: CMakeLists.txt  main.cpp  util.cpp  util.h
App/commands/: commands.hpp  objects.hpp
App/commands/runtime/: command_2.hpp  test_cmd.hpp
App/commands/test_cmd/: test_cmd.cpp  test_cmd.hpp
App/util/: util.cpp  util.h  util.hpp
chorse/: makefile
chorse/src/: main.cpp
cppBuild/: makefile
cppBuild/src/: main.cpp
